# CODE1210_Scrape_Workshop

./: .env.example  .gitignore  README.md  Scraper.py  pyproject.toml  requirements.txt  run.py  utils.py
.streamlit/: config.toml
core/: models.py  runner.py  storage.py
docs/: PROJECT.md
pages/: 1_Results.py  2_Compare.py  3_Export.py
scrapers/: __init__.py  base.py  google_places.py  mastodon.py  reddit.py
